@@ -1,155 +1,107 @@
-/* ====================================================================
-   Licensed to the Apache Software Foundation (ASF) under one or more
-   contributor license agreements.  See the NOTICE file distributed with
-   this work for additional information regarding copyright ownership.
-   The ASF licenses this file to You under the Apache License, Version 2.0
-   (the "License"); you may not use this file except in compliance with
-   the License.  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
-==================================================================== */
-
 // This script is used as input to the Jenkins Job DSL plugin to create all the build-jobs that
-// Apache POI uses on the public Jenkins instance at https://ci-builds.apache.org/job/POI/
+// Apache POI uses on the public Jenkins instance at https://builds.apache.org/view/P/view/POI/
 //
 // See https://github.com/jenkinsci/job-dsl-plugin/wiki for information about the DSL, you can
-// use https://job-dsl.herokuapp.com/ to validate the code before checkin
-//
+// use http://job-dsl.herokuapp.com/ to validate the code before checkin
+// 
 
 def triggerSundays = '''
 # only run this once per week on Sundays
 H H * * 0
 '''
 
-def xercesUrl = 'https://repo1.maven.org/maven2/xerces/xercesImpl/2.6.1/xercesImpl-2.6.1.jar'
+def xercesUrl = 'http://repo1.maven.org/maven2/xerces/xercesImpl/2.6.1/xercesImpl-2.6.1.jar'
 def xercesLib = './xercesImpl-2.6.1.jar'
 
 def poijobs = [
-        [ name: 'POI-DSL-1.8',
-          jdk: '1.8',
-          trigger: 'H */12 * * *',
-          jenkinsLite: true,
-          disabled: true  // JDK 8 is no longer supported by POI 6
+        [ name: 'POI-DSL-1.8', trigger: 'H */12 * * *'
         ],
-        [ name: 'POI-DSL-1.8-branch-5.5.x',
-          jdk: '1.8',
-          branch: '5.5.x',
-          trigger: 'H */12 * * *',
-          jenkinsLite: true,
+        [ name: 'POI-DSL-OpenJDK', jdk: 'OpenJDK', trigger: 'H */12 * * *',
+          // H13-H20 (Ubuntu 16.04) do not have OpenJDK 6 installed, see https://issues.apache.org/jira/browse/INFRA-12880
+          slaveAdd: '&&!H0&&!H1&&!H2&&!H3&&!H4&&!H5&&!H6&&!H7&&!H8&&!H9&&!H10&&!H11' +
+                  '&&!qnode3' +
+                  '&&!ubuntu-1&&!ubuntu-2&&!ubuntu-4&&!ubuntu-5&&!ubuntu-6&&!ubuntu-eu2&&!ubuntu-us1',
+          // the JDK is missing on some slaves so builds are unstable
+          skipcigame: true
+        ],
+        [ name: 'POI-DSL-1.10', jdk: '1.10', trigger: triggerSundays, skipcigame: true
         ],
         [ name: 'POI-DSL-1.11', jdk: '1.11', trigger: triggerSundays, skipcigame: true
         ],
-        [ name: 'POI-DSL-1.17', jdk: '1.17', trigger: 'H */12 * * *', skipcigame: true
+        [ name: 'POI-DSL-1.12', jdk: '1.12', trigger: triggerSundays, skipcigame: true,
+          // H43 has outdated JDK12 installed
+          slaveAdd: '&&!H43'
         ],
-        [ name: 'POI-DSL-1.21', jdk: '1.21', trigger: 'H */12 * * *', skipcigame: true
+        [ name: 'POI-DSL-1.13', jdk: '1.13', trigger: triggerSundays, skipcigame: true
         ],
-        [ name: 'POI-DSL-1.24', jdk: '1.24', trigger: triggerSundays, skipcigame: true,
+        [ name: 'POI-DSL-IBM-JDK', jdk: 'IBMJDK', trigger: triggerSundays, skipcigame: true
         ],
-        [ name: 'POI-DSL-1.25', jdk: '1.25', trigger: triggerSundays, skipcigame: true, skipSpotbugs: true,
-          // use Ant for building until Gradle supports JDK 25
-          // see https://docs.gradle.org/current/userguide/compatibility.html
-          // and https://github.com/gradle/gradle/issues/31625
-          useAnt: true
-        ],
-        // Use Ant-build for now as selecting IBM JDK via toolchain does not work (yet)
-        [ name: 'POI-DSL-IBM-JDK', jdk: 'IBMJDK', trigger: triggerSundays, skipcigame: true, useAnt: true
-        ],
-        // Use Ant-build for now as passing the "additionaljar" does not work in Gradle build (yet)
-        [ name: 'POI-DSL-old-Xerces', trigger: triggerSundays, skipcigame: true, useAnt: true,
-          shell: "test -s ${xercesLib} || wget -O ${xercesLib} ${xercesUrl}\n",
+        [ name: 'POI-DSL-old-Xerces', trigger: triggerSundays,
+          shell: "test -f ${xercesLib} || wget -O ${xercesLib} ${xercesUrl}\n",
           // the property triggers using Xerces as XML Parser and previously showed some exception that can occur
           properties: ["-Dadditionaljar=${xercesLib}"]
         ],
+        [ name: 'POI-DSL-Maven', trigger: 'H */4 * * *', maven: true
+        ],
         [ name: 'POI-DSL-regenerate-javadoc', trigger: triggerSundays, javadoc: true
         ],
-        // it was impossible to make this run stable in Gradle, thus disabling this for now
-        [ name: 'POI-DSL-API-Check', trigger: '@daily', apicheck: true, disabled: true, useAnt: true
+        [ name: 'POI-DSL-API-Check', trigger: '@daily', apicheck: true
+        ],
+        [ name: 'POI-DSL-Gradle', trigger: triggerSundays, email: 'centic@apache.org', gradle: true,
+          // Gradle will not run any tests if the code is up-to-date, therefore manually mark the files as updated
+          addShell: 'touch --no-create build/*/build/test-results/TEST-*.xml build/*/build/test-results/test/TEST-*.xml'
         ],
         [ name: 'POI-DSL-no-scratchpad', trigger: triggerSundays, noScratchpad: true
         ],
-        [ name: 'POI-DSL-saxon-test', trigger: triggerSundays, saxonTest: true
+        [ name: 'POI-DSL-SonarQube', trigger: 'H 9 * * *', maven: true, sonar: true, skipcigame: true
         ],
-//        [ name: 'POI-DSL-SonarQube', jdk: '1.11', trigger: 'H 7 * * *', maven: true, sonar: true, skipcigame: true,
-//          email: 'kiwiwings@apache.org',
-//		  // replaced by Gradle-based build now
-//		  disabled: true
-//        ],
-        [ name: 'POI-DSL-SonarQube-Gradle', jdk: '1.17', trigger: 'H 7 * * *', sonar: true, skipcigame: true
+        [ name: 'POI-DSL-SonarQube-Gradle', trigger: 'H 9 * * *', gradle: true, sonar: true, skipcigame: true,
+                disabled: true // this one does run, but does not actually send data to Sonarqube for some reason, we need to investigate some more
         ],
-        [ name: 'POI-DSL-Windows-1.8',
-          trigger: 'H */12 * * *',
-          windows: true,
-          slaves: 'Windows',
-          jenkinsLite: true,
-          disabled: true  // JDK 8 is no longer supported by POI 6
+        [ name: 'POI-DSL-Windows-1.8', trigger: 'H */12 * * *', windows: true, slaves: 'Windows'
         ],
-        [ name: 'POI-DSL-Windows-1.11', jdk: '1.11', trigger: triggerSundays, windows: true, slaves: 'Windows',
-          jenkinsLite: true
+        [ name: 'POI-DSL-Windows-1.12', jdk: '1.12', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true
         ],
-        [ name: 'POI-DSL-Windows-1.17', jdk: '1.17', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', skipcigame: true
-        ],
-        [ name: 'POI-DSL-Windows-1.21', jdk: '1.21', trigger: 'H */12 * * *', windows: true, slaves: 'Windows', skipcigame: true
-        ],
-        [ name: 'POI-DSL-Windows-1.24', jdk: '1.24', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
-        ],
-        [ name: 'POI-DSL-Windows-1.25', jdk: '1.25', trigger: triggerSundays, windows: true, slaves: 'Windows', skipcigame: true,
-          skipSpotbugs: true,
-          // use Ant for building until Gradle supports JDK 24
-          // see https://docs.gradle.org/current/userguide/compatibility.html
-          // and https://github.com/gradle/gradle/issues/31625
-          useAnt: true
-        ],
-        [ name: 'POI-DSL-Github-PullRequests', trigger: '', skipcigame: true, disabled: true
+        [ name: 'POI-DSL-Github-PullRequests', trigger: '', githubpr: true, skipcigame: true,
+          // ensure the file which is needed from the separate documentation module does exist
+          // as we are checking out from git, we do not have the reference checked out here
+          addShell: 'mkdir -p src/documentation\ntouch src/documentation/RELEASE-NOTES.txt'
         ],
 ]
 
 def xmlbeansjobs = [
+        [ name: 'POI-XMLBeans-DSL-1.6', jdk: '1.6', trigger: 'H */12 * * *', skipcigame: true,
+                disabled: true // XMLBeans does not support Java 6 any more
+        ],
         [ name: 'POI-XMLBeans-DSL-1.8', jdk: '1.8', trigger: 'H */12 * * *', skipcigame: true,
         ],
         [ name: 'POI-XMLBeans-DSL-1.11', jdk: '1.11', trigger: triggerSundays, skipcigame: true,
         ],
-        [ name: 'POI-XMLBeans-DSL-1.17', jdk: '1.17', trigger: 'H */12 * * *', skipcigame: true,
-        ],
-        [ name: 'POI-XMLBeans-DSL-1.21', jdk: '1.21', trigger: 'H */12 * * *', skipcigame: true,
-        ],
-        [ name: 'POI-XMLBeans-DSL-1.24', jdk: '1.24', trigger: triggerSundays, skipcigame: true,
-          disabled: true
-        ],
-        [ name: 'POI-XMLBeans-DSL-1.25', jdk: '1.25', trigger: triggerSundays, skipcigame: true,
-        ],
-        [ name: 'POI-XMLBeans-DSL-Sonar', jdk: '1.17', trigger: triggerSundays, skipcigame: true,
-          sonar: true
+        [ name: 'POI-XMLBeans-DSL-1.12', jdk: '1.12', trigger: triggerSundays, skipcigame: true,
         ]
 ]
 
-def gitBase = 'https://github.com/apache/poi.git'
-def xmlbeansGitBase = 'https://github.com/apache/xmlbeans.git'
+def svnBase = 'https://svn.apache.org/repos/asf/poi/trunk'
+def xmlbeansSvnBase = 'https://svn.apache.org/repos/asf/xmlbeans/trunk'
 
-def defaultJdk = '1.11'
-def defaultBranch = 'trunk'
+def defaultJdk = '1.8'
 def defaultTrigger = 'H/15 * * * *'     // check SCM every 60/15 = 4 minutes
 def defaultEmail = 'dev@poi.apache.org'
-def defaultAnt = 'ant_1.10_latest'
-def defaultAntWindows = 'ant_1.10_latest_windows'
-def defaultMaven = 'maven_3_latest'
-// H29 seems to have very little memory
-def defaultSlaves = '(ubuntu)&&!beam&&!cloud-slave&&!H29'
+def defaultAnt = 'Ant 1.9 (Latest)'
+def defaultAntWindows = 'Ant 1.9 (Latest Windows)'
+// currently a lot of H?? slaves don't have Ant installed ... H21 seems to have a SVN problem
+// H35 fails with ImageIO create cache file errors, although the java.io.tmpdir is writable
+def defaultSlaves = '(ubuntu)&&!beam&&!cloud-slave&&!H15&&!H17&&!H18&&!H24&&!ubuntu-4&&!H21&&!H35'
 
 def jdkMapping = [
-        '1.8': [ jenkinsJdk: 'jdk_1.8_latest', jdkVersion: 8, jdkVendor: '' ],
-        '1.11': [ jenkinsJdk: 'jdk_11_latest', jdkVersion: 11, jdkVendor: '' ],
-        '1.17': [ jenkinsJdk: 'jdk_17_latest', jdkVersion: 17, jdkVendor: '' ],
-        '1.21': [ jenkinsJdk: 'jdk_21_latest', jdkVersion: 21, jdkVendor: '' ],
-        '1.24': [ jenkinsJdk: 'jdk_24_latest', jdkVersion: 24, jdkVendor: '' ],
-        '1.25': [ jenkinsJdk: 'jdk_25_latest', jdkVersion: 25, jdkVendor: '' ],
-        // one of the few IBM JDKs that is still supported on ci-builds.apache.org
-        'IBMJDK': [ jenkinsJdk: 'ibm_semeru_21.0.2_13', jdkVersion: 21, jdkVendor: 'ibm' ]
+        '1.6': 'JDK 1.6 (latest)',
+        '1.8': 'JDK 1.8 (latest)',
+        '1.10': 'JDK 10 (latest)',
+        '1.11': 'JDK 11 (latest)',
+        '1.12': 'JDK 12 (latest)',
+        '1.13': 'JDK 13 (latest)',
+        'OpenJDK': 'OpenJDK 8 (on Ubuntu only) ',   // blank is required here until the name in the Jenkins instance is fixed!
+        'IBMJDK': 'IBM 1.8 64-bit (on Ubuntu only)',
 ]
 
 static def shellEx(def context, String cmd, def poijob) {
@@ -167,39 +119,34 @@ Apache POI - the Java API for Microsoft Documents
 </p>
 <p>
 <b>This is an automatically generated Job Config, do not edit it here!
-Instead change the Jenkins Job DSL at <a href="https://github.com/apache/poi/blob/trunk/jenkins/">https://github.com/apache/poi/blob/trunk/jenkins/</a>,
+Instead change the Jenkins Job DSL at <a href="https://svn.apache.org/repos/asf/poi/trunk/jenkins">https://svn.apache.org/repos/asf/poi/trunk/jenkins</a>,
 see <a href="https://github.com/jenkinsci/job-dsl-plugin/wiki">https://github.com/jenkinsci/job-dsl-plugin/wiki</a>
 for more details about the DSL.</b>
 </p>'''
 
 def apicheckDesc = '''
 <p>
-<b><a href="https://sonarcloud.io/dashboard?id=poi-parent" target="_blank">Sonar reports</a></b> -
+<b><a href="https://builds.apache.org/analysis/dashboard?id=org.apache.poi%3Apoi-parent&did=1" target="_blank">Sonar reports</a></b> -
 <p>
-<b><a href="lastSuccessfulBuild/artifact/build/poi/build/reports/japi.html">API Check POI</a></b>
-<b><a href="lastSuccessfulBuild/artifact/build/poi-ooxml/build/reports/japi.html">API Check POI-OOXML</a></b>
-<b><a href="lastSuccessfulBuild/artifact/build/poi-excelant/build/reports/japi.html">API Check POI-Excelant</a></b>
-<b><a href="lastSuccessfulBuild/artifact/build/poi-scratchpad/build/reports/japi.html">API Check POI-Scratchpad</a></b>
+<b><a href="lastSuccessfulBuild/artifact/build/main/build/reports/japi.html">API Check POI</a></b>
+<b><a href="lastSuccessfulBuild/artifact/build/ooxml/build/reports/japi.html">API Check POI-OOXML</a></b>
+<b><a href="lastSuccessfulBuild/artifact/build/excelant/build/reports/japi.html">API Check POI-Excelant</a></b>
+<b><a href="lastSuccessfulBuild/artifact/build/scratchpad/build/reports/japi.html">API Check POI-Scratchpad</a></b>
 
 </p>
 '''
 
 def sonarDesc = '''
 <p>
-<b><a href="lastSuccessfulBuild/spotbugs/" target="_blank">Spotbugs report of latest build</a></b> -
-<b><a href="https://sonarcloud.io/dashboard?id=poi-parent" target="_blank">Sonar reports</a></b> -
-<b><a href="lastSuccessfulBuild/jacoco/" target="_blank">Coverage of latest build</a></b>
+<b><a href="lastSuccessfulBuild/findbugsResult/" target="_blank">Findbugs report of latest build</a></b> -
+<b><a href="https://builds.apache.org/analysis/dashboard?id=org.apache.poi%3Apoi-parent&did=1" target="_blank">Sonar reports</a></b> -
+<b><a href="lastSuccessfulBuild/artifact/build/coverage/index.html" target="_blank">Coverage of latest build</a></b>
 </p>
 '''
 
 def shellCmdsUnix =
-        '''# remove some outdated directories that should not be there any more
-rm -rf examples excelant integrationtest main ooxml ooxml-schema scratchpad build.javacheck.xml
-
-# show which files are currently modified in the working copy
-git status || true
-# make sure no changed module-class-files or ooxml-lite-report-files are lingering on
-git reset --hard || true
+        '''# show which files are currently modified in the working copy
+svn status || true
 
 # print out information about which exact version of java we are using
 echo Java-Home: $JAVA_HOME
@@ -232,9 +179,7 @@ exit 0'''
 def shellCmdsWin =
         '''@echo off
 :: show which files are currently modified in the working copy
-git status
-:: make sure no changed module-class-files are lingering on
-git reset --hard
+svn status
 
 :: print out information about which exact version of java we are using
 echo Java-Home: %JAVA_HOME%
@@ -252,9 +197,8 @@ poijobs.each { poijob ->
     def email = poijob.email ?: defaultEmail
     def slaves = poijob.slaves ?: defaultSlaves + (poijob.slaveAdd ?: '')
     def antRT = poijob.windows ? defaultAntWindows : defaultAnt
-    def checkoutBranch = poijob.branch ?: defaultBranch
 
-    job('POI/' + poijob.name) {
+    job(poijob.name) {
         if (poijob.disabled) {
             disabled()
         }
@@ -267,53 +211,121 @@ poijobs.each { poijob ->
         label(slaves)
         environmentVariables {
             env('LANG', 'en_US.UTF-8')
-            env('CI_BUILD', 'TRUE')
+            if(jdkKey == '1.10') {
+                // when using JDK 9/10 for running Ant, we need to provide more modules for the forbidden-api-checks task
+                // on JDK 11 and newer there is no such module any more, so do not add it here
+                env('ANT_OPTS', '--add-modules=java.xml.bind --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
+            }
             env('FORREST_HOME', poijob.windows ? 'f:\\jenkins\\tools\\forrest\\latest' : '/home/jenkins/tools/forrest/latest')
         }
-
         wrappers {
             timeout {
-                absolute(300)
+                absolute(180)
                 abortBuild()
                 writeDescription('Build was aborted due to timeout')
             }
             preBuildCleanup {
-                /* remove xmlbeans while 4.0 is not stable */
-                includePattern('**/lib/ooxml/xmlbeans*.jar')
-                includePattern('**/lib/ooxml/ooxml*.jar')
-                /* remove ooxml-schemas while the builds migrate to 5th edition */
-                includePattern('build/xmlbean-*/**')
-                /* remove remaining src debris */
-                includePattern('src/*/build/**')
+                includePattern('**/ooxml-lib/ooxml*.jar')
             }
             if(poijob.sonar) {
-                credentialsBinding {
-                    string('POI_SONAR_TOKEN', 'sonarcloud-poi')
-                }
                 configure { project ->
                     project / buildWrappers << 'hudson.plugins.sonar.SonarBuildWrapper' {}
                 }
             }
         }
-        jdk(jdkMapping.get(jdkKey).jenkinsJdk)
+        jdk(jdkMapping.get(jdkKey))
         scm {
-            git {
-                remote {
-                    url(gitBase)
+            if (poijob.githubpr) {
+                git {
+                    remote {
+                        github('apache/poi')
+                        refspec('+refs/pull/*:refs/remotes/origin/pr/*')
+                    }
+                    branch('${sha1}')
                 }
-                branch("*/${checkoutBranch}")
+            } else {
+                svn(svnBase) { svnNode ->
+                    svnNode / browser(class: 'hudson.scm.browsers.ViewSVN') /
+                            url << 'http://svn.apache.org/viewcvs.cgi/?root=Apache-SVN'
+                }
             }
         }
         checkoutRetryCount(3)
 
-        triggers {
-            scm(trigger)
+        if (poijob.githubpr) {
+            throttleConcurrentBuilds {
+                maxPerNode(1)
+                maxTotal(1)
+            }
+            parameters {
+                /* plugin not available:
+                gitParam('sha1') {
+                    description('Pull request')
+                    type('BRANCH')
+                }*/
+                stringParam('sha1', 'origin/pr/9/head', 'Provide a branch-spec, e.g. origin/pr/9/head')
+            }
+            triggers {
+                githubPullRequest {
+                    admins(['centic9', 'poi-benchmark', 'tballison', 'gagravarr', 'onealj', 'pjfanning', 'Alain-Bearez'])
+                    userWhitelist(['centic9', 'poi-benchmark', 'tballison', 'gagravarr', 'onealj', 'pjfanning', 'Alain-Bearez'])
+                    orgWhitelist(['apache'])
+                    cron('H/5 * * * *')
+                    triggerPhrase('OK to test')
+                }
+            }
+        } else {
+            triggers {
+                scm(trigger)
+            }
         }
 
         def shellcmds = (poijob.windows ? shellCmdsWin : shellCmdsUnix).replace('POIJOBSHELL', poijob.shell ?: '')
 
         // Create steps and publishers depending on the type of Job that is selected
-        if (poijob.javadoc) {
+        if(poijob.maven) {
+            steps {
+                shellEx(delegate, shellcmds, poijob)
+                maven {
+                    goals('clean')
+                    rootPOM('sonar/pom.xml')
+                    localRepository(LocalRepositoryLocation.LOCAL_TO_WORKSPACE)
+                    mavenInstallation('maven-3.2.1')
+                }
+                /* Currently not done, let's see if it is still necessary:
+                    # Maven-Download fails for strange reasons, try to workaround...
+                    mkdir -p sonar/ooxml-schema-security/target/schemas && wget -O sonar/ooxml-schema-security/target/schemas/xmldsig-core-schema.xsd http://www.w3.org/TR/2002/REC-xmldsig-core-20020212/xmldsig-core-schema.xsd
+                */
+                maven {
+                    if(poijob.sonar) {
+                        goals('compile $SONAR_MAVEN_GOAL -Dsonar.host.url=$SONAR_HOST_URL')
+                    } else {
+                        goals('package')
+                    }
+                    rootPOM('sonar/pom.xml')
+                    mavenOpts('-Xmx2g')
+                    mavenOpts('-Xms256m')
+                    mavenOpts('-XX:-OmitStackTraceInFastThrow')
+                    localRepository(LocalRepositoryLocation.LOCAL_TO_WORKSPACE)
+                    mavenInstallation('maven-3.2.1')
+                }
+            }
+            publishers {
+                if (!poijob.skipcigame) {
+                    configure { project ->
+                        project / publishers << 'hudson.plugins.cigame.GamePublisher' {}
+                    }
+                }
+                if (!poijob.sonar) {
+                    archiveJunit('sonar/*/target/surefire-reports/TEST-*.xml') {
+                        testDataPublishers {
+                            publishTestStabilityData()
+                        }
+                    }
+                }
+                mailer(email, false, false)
+            }
+        } else if (poijob.javadoc) {
             steps {
                 shellEx(delegate, shellcmds, poijob)
                 ant {
@@ -333,42 +345,34 @@ poijobs.each { poijob ->
                 }
                 mailer(email, false, false)
             }
-        } else if(poijob.sonar) {
+        } else if (poijob.apicheck) {
             steps {
                 shellEx(delegate, shellcmds, poijob)
-
                 gradle {
-                    switches('-PenableSonar')
-                    switches('-Dsonar.token=${POI_SONAR_TOKEN}')
-                    switches('-Dsonar.organization=apache')
-                    switches('-Dsonar.projectKey=poi-parent')
-                    switches('-Dsonar.host.url=https://sonarcloud.io')
-                    switches("-PjdkVersion=${jdkMapping.get(jdkKey).jdkVersion}")
-                    if (jdkMapping.get(jdkKey).jdkVendor != '') {
-                        switches("-PjdkVendor=${jdkMapping.get(jdkKey).jdkVendor}")
-                    }
-                    tasks('clean')
-                    tasks('check')
-                    tasks('jacocoTestReport')
-                    tasks('sonar')
+                    tasks('japicmp')
                     useWrapper(true)
                 }
             }
             publishers {
-                // in archive, junit and jacoco publishers, matches beneath build/*/build/... are for Gradle-build results
-                archiveArtifacts('build/dist/*.tar.gz,*/build/reports/**,poi-integration/build/test-results/**,*/build/libs/*.jar')
-                archiveJunit('*/build/test-results/**/TEST-*.xml') {
-                    testDataPublishers {
-                        publishTestStabilityData()
+                archiveArtifacts('build/*/build/reports/japi.html')
+                if (!poijob.skipcigame) {
+                    configure { project ->
+                        project / publishers << 'hudson.plugins.cigame.GamePublisher' {}
                     }
                 }
-                jacocoCodeCoverage {
-                    classPattern('*/build/classes')
-                    execPattern('*/build/*.exec,*/build/jacoco/*.exec')
-                    sourcePattern('*/src/main/java')
-                    exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
+                mailer(email, false, false)
+            }
+        } else if(poijob.sonar) {
+            steps {
+                shellEx(delegate, shellcmds, poijob)
+                gradle {
+                    switches('-PenableSonar')
+                    switches('-Dsonar.host.url=$SONAR_HOST_URL')
+                    tasks('sonarqube')
+                    useWrapper(false)
                 }
-
+            }
+            publishers {
                 if (!poijob.skipcigame) {
                     configure { project ->
                         project / publishers << 'hudson.plugins.cigame.GamePublisher' {}
@@ -383,79 +387,60 @@ poijobs.each { poijob ->
                     shellEx(delegate, poijob.addShell, poijob)
                 }
                 // For Jobs that should still have the default set of publishers we can configure different steps here
-                if(!poijob.useAnt) {
-                    if (!poijob.windows) {
-                        // Gradle will not run any tests if the code is up-to-date, therefore manually mark the files as updated
-                        shellEx(delegate, 'touch --no-create build/*/build/test-results/TEST-*.xml build/*/build/test-results/test/TEST-*.xml', poijob)
-                    }
-
+                if(poijob.gradle) {
                     gradle {
-                        if (poijob.jenkinsLite) {
-                            tasks('clean jenkinsLite')
-                        } else {
-                            tasks('clean jenkins')
-                        }
-                        useWrapper(true)
-                        if (poijob.noScratchpad) {
-                            switches('-Pscratchpad.ignore=true')
-                        }
-                        if (poijob.saxonTest) {
-                            switches('-Psaxon.test=true')
-                        }
-                        switches("-PjdkVersion=${jdkMapping.get(jdkKey).jdkVersion}")
-                        if (jdkMapping.get(jdkKey).jdkVendor != '') {
-                            switches("-PjdkVendor=${jdkMapping.get(jdkKey).jdkVendor}")
-                        }
-                        switches("--refresh-dependencies")
+                        tasks('check')
+                        useWrapper(false)
+                    }
+                } else if (poijob.noScratchpad) {
+                    ant {
+                        targets(['clean', 'compile'] + (poijob.properties ?: []))
+                        prop('coverage.enabled', true)
+                        antInstallation(antRT)
+                    }
+                    ant {
+                        targets(['-Dscratchpad.ignore=true', 'jacocotask', 'test-all', 'testcoveragereport'] + (poijob.properties ?: []))
+                        prop('coverage.enabled', true)
+                        antInstallation(antRT)
                     }
                 } else {
                     ant {
                         targets(['clean', 'jenkins'] + (poijob.properties ?: []))
-                        prop('coverage.enabled', !poijob.skipSpotbugs)
+                        prop('coverage.enabled', true)
                         // Properties did not work, so I had to use targets instead
                         //properties(poijob.properties ?: '')
                         antInstallation(antRT)
                     }
-                    if(!poijob.skipSourceBuild) {
-                        ant {
-                            targets(['run'] + (poijob.properties ?: []))
-                            buildFile('poi-integration/build.xml')
-                            // Properties did not work, so I had to use targets instead
-                            //properties(poijob.properties ?: '')
-                            antInstallation(antRT)
-                        }
+                    ant {
+                        targets(['run'] + (poijob.properties ?: []))
+                        buildFile('src/integrationtest/build.xml')
+                        // Properties did not work, so I had to use targets instead
+                        //properties(poijob.properties ?: '')
+                        antInstallation(antRT)
                     }
                 }
             }
             publishers {
-                if (!poijob.skipSpotbugs) {
-                    recordIssues {
-                        tools {
-                            spotBugs {
-                                pattern('*/build/reports/spotbugs/*.xml')
-                                reportEncoding('UTF-8')
-                            }
-                        }
-                    }
+                findbugs('build/findbugs.xml', false) {
+                    healthLimits(3, 20)
+                    thresholdLimit('low')
+                    defaultEncoding('UTF-8')
                 }
                 // in archive, junit and jacoco publishers, matches beneath build/*/build/... are for Gradle-build results
-                archiveArtifacts('build/dist/*.zip,build/dist/*.tgz,build/dist/maven/*/*.jar,build/dist/maven/*/*.pom,build/dist/maven/*/*.asc,build/dist/maven/*/*.sha256,build/dist/maven/*/*.sha512,build/coverage/**,*/build/reports/*.bom.*,build/hs_err*.log')
-                /* this plugin is currently missing on the Apache Jenkins instance
+                archiveArtifacts('build/dist/*.tar.gz,build/findbugs.html,build/coverage/**,build/integration-test-results/**,ooxml-lib/**,build/*/build/libs/*.jar')
                 warnings(['Java Compiler (javac)', 'JavaDoc Tool'], null) {
                     resolveRelativePaths()
-                } */
-                archiveJunit('*/build/test-results/**/TEST-*.xml') {
+                }
+                archiveJunit('build/ooxml-test-results/*.xml,build/scratchpad-test-results/*.xml,build/test-results/*.xml,build/excelant-test-results/*.xml,build/integration-test-results/*.xml,build/*/build/test-results/test/TEST-*.xml,build/*/build/test-results/TEST-*.xml') {
                     testDataPublishers {
                         publishTestStabilityData()
                     }
                 }
-                if (!poijob.skipSpotbugs) {
-                    jacocoCodeCoverage {
-                        classPattern('*/build/classes')
-                        execPattern('*/build/*.exec,*/build/jacoco/*.exec')
-                        sourcePattern('*/src/main/java')
-                        exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
-                    }
+                jacocoCodeCoverage {
+                    classPattern('build/classes,build/excelant-classes,build/ooxml-classes,build/scratchpad-classes,build/*/build/classes')
+                    execPattern('build/*.exec,build/*/build/jacoco/*.exec')
+                    sourcePattern('src/java,src/excelant/java,src/ooxml/java,src/scratchpad/src')
+                    exclusionPattern('com/microsoft/**,org/openxmlformats/**,org/etsi/**,org/w3/**,schemaorg*/**,schemasMicrosoft*/**,org/apache/poi/hdf/model/hdftypes/definitions/*.class,org/apache/poi/hwpf/model/types/*.class,org/apache/poi/hssf/usermodel/DummyGraphics2d.class,org/apache/poi/sl/draw/binding/*.class')
                 }
 
                 if (!poijob.skipcigame) {
@@ -466,7 +451,6 @@ poijobs.each { poijob ->
                 mailer(email, false, false)
             }
         }
-
     }
 }
 
@@ -477,12 +461,12 @@ xmlbeansjobs.each { xjob ->
     def slaves = xjob.slaves ?: defaultSlaves + (xjob.slaveAdd ?: '')
     def antRT = xjob.windows ? defaultAntWindows : defaultAnt
 
-    job('POI/' + xjob.name) {
+    job(xjob.name) {
         if (xjob.disabled) {
             disabled()
         }
 
-        description( defaultDesc + (xjob.apicheck ? apicheckDesc : sonarDesc.replace('poi-parent','apache_xmlbeans')) )
+        description( defaultDesc + (xjob.apicheck ? apicheckDesc : sonarDesc) )
         logRotator {
             numToKeep(5)
             artifactNumToKeep(1)
@@ -490,8 +474,11 @@ xmlbeansjobs.each { xjob ->
         label(slaves)
         environmentVariables {
             env('LANG', 'en_US.UTF-8')
-            if (jdkKey == '1.11' || jdkKey == '1.17' || jdkKey == '1.21'
-                    || jdkKey == '1.23' || jdkKey == '1.24' || jdkKey == '1.25') {
+            if(jdkKey == '1.10') {
+                // when using JDK 9/10 for running Ant, we need to provide more modules for the forbidden-api-checks task
+                // on JDK 11 and newer there is no such module any more, so do not add it here
+                env('ANT_OPTS', '--add-modules=java.xml.bind --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
+            } else if (jdkKey == '1.11' || jdkKey == '1.12' || jdkKey == '1.13') {
                 env('ANT_OPTS', '--add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED')
             }
             // will be needed for forbidden-apis-check: env('ANT_HOME', xjob.windows ? 'f:\\jenkins\\tools\\ant\\latest' : '/usr/share/ant')
@@ -503,22 +490,12 @@ xmlbeansjobs.each { xjob ->
                 abortBuild()
                 writeDescription('Build was aborted due to timeout')
             }
-            if(xjob.sonar) {
-                credentialsBinding {
-                    string('POI_SONAR_TOKEN', 'sonarcloud-poi')
-                }
-                configure { project ->
-                    project / buildWrappers << 'hudson.plugins.sonar.SonarBuildWrapper' {}
-                }
-            }
         }
-        jdk(jdkMapping.get(jdkKey).jenkinsJdk)
+        jdk(jdkMapping.get(jdkKey))
         scm {
-            git {
-                remote {
-                    url(xmlbeansGitBase)
-                }
-                branch('*/trunk')
+            svn(xmlbeansSvnBase) { svnNode ->
+                svnNode / browser(class: 'hudson.scm.browsers.ViewSVN') /
+                        url << 'http://svn.apache.org/viewcvs.cgi/?root=Apache-SVN'
             }
         }
         checkoutRetryCount(3)
@@ -535,46 +512,24 @@ xmlbeansjobs.each { xjob ->
             if(xjob.addShell) {
                 shellEx(delegate, xjob.addShell, xjob)
             }
-
-            gradle {
-                if (xjob.sonar) {
-                    switches('-PenableSonar')
-                    switches('-Dsonar.token=${POI_SONAR_TOKEN}')
-                    switches('-Dsonar.organization=apache')
-                    switches('-Dsonar.projectKey=apache_xmlbeans')
-                    switches('-Dsonar.host.url=https://sonarcloud.io')
-                    switches("-PjdkVersion=${jdkMapping.get(jdkKey).jdkVersion}")
-                    if (jdkMapping.get(jdkKey).jdkVendor != '') {
-                        switches("-PjdkVendor=${jdkMapping.get(jdkKey).jdkVendor}")
-                    }
-                }
-                tasks('clean')
-                tasks('jenkins')
-                tasks('jacocoTestReport')
-                if (xjob.sonar) {
-                    tasks('sonar')
-                }
-                useWrapper(true)
+            ant {
+                targets(['clean'])
+                antInstallation(antRT)
+            }
+            ant {
+                targets(['jenkins'])
+                antInstallation(antRT)
             }
         }
         publishers {
-            archiveArtifacts('build/libs/xmlbeans*.jar,build/distributions/*,build/reports/*.bom.*,build/hs_err*.log')
+            archiveArtifacts('build/**')
 
-            /* this plugin is currently missing on the Apache Jenkins instance
             warnings(['Java Compiler (javac)', 'JavaDoc Tool'], null) {
                 resolveRelativePaths()
-            } */
-            archiveJunit('build/test-results/test/TEST-*.xml') {
+            }
+            archiveJunit('build/test-results/TEST-*.xml') {
                 testDataPublishers {
                     publishTestStabilityData()
-                }
-            }
-            recordIssues {
-                tools {
-                    spotBugs {
-                        pattern('build/reports/spotbugs/*/spotbugs.xml')
-                        reportEncoding('UTF-8')
-                    }
                 }
             }
 
@@ -590,12 +545,12 @@ xmlbeansjobs.each { xjob ->
 
 /*
 Add a special job which spans a two-dimensional matrix of all JDKs that we want to use and
-all worker nodes that we would like to use and test if the java and ant binaries are available
+all slaves that we would like to use and test if the java and ant binaries are available
 on that machine correctly.
  */
-matrixJob('POI/POI-DSL-Test-Environment') {
+matrixJob('POI-DSL-Test-Environment') {
     description(
-            '''Check installed version of Java/Ant on all build-nodes
+'''Check installed version of Java/Ant on all build-nodes
 
 This job is used to verify which machines actually have the required programs installed.
 
@@ -611,56 +566,51 @@ Unfortunately we often see builds break because of changes/new machines...''')
     }
     axes {
         jdk(
-                'jdk_8_latest',
-                'jdk_11_latest',
-                'jdk_17_latest',
-                'jdk_21_latest',
-                'jdk_23_latest',
-                'jdk_24_latest',
-                'jdk_25_latest',
-                'jdk_26_latest',
-                'ibm_semeru_21.0.2_13'
+                'JDK 1.8 (latest)',
+                'OpenJDK 8 (on Ubuntu only) ',   // blank is required here until the name in the Jenkins instance is fixed!
+                'IBM 1.8 64-bit (on Ubuntu only)',
+
+                'JDK 10 (latest)',
+
+                'JDK 11 (latest)',
+
+                'JDK 12 (latest)',
+
+                'JDK 13 (latest)'
         )
-        // Note H50 is reserved according to its node-description
-        label('Nodes','builds22','builds23','builds24','builds25','builds26','builds27','builds28','builds29','builds30','builds31','builds32','builds33','builds34','builds35','builds36','builds37','builds38','builds39','builds40','builds50','builds56','builds57','builds58','builds59','builds60',
-                'jenkins-win-azr-1','jenkins-win-azr-2','jenkins-win-azr-3','jenkins-win-azr-4','jenkins-win-azr-5','jenkins-win-azr-6','jenkins-win-azr-7','jenkins-win-azr-8','jenkins-win-azr-10','jenkins-win-azr-11','jenkins-win-azr-12')
+        elasticAxis {
+            name('Nodes')
+            labelString('!cloud-slave&&!H15&&!H17&&!H18&&!H24&&!ubuntu-4&&!H21&&!H35&&!websites1&&!couchdb&&!plc4x&&!ppc64le')
+            ignoreOffline(true)
+        }
     }
     steps {
         conditionalSteps {
             condition {
                 fileExists('/usr', BaseDir.WORKSPACE)
-            }
-            runner('DontRun')
-            steps {
-                shell(
-                        '''which git || true
+                runner('DontRun')
+                steps {
+                    shell(
+'''which svn || true
 which javac
 javac -version
 echo '<?xml version="1.0"?><project name="POI Build" default="test"><target name="test"><echo>Using Ant: ${ant.version} from ${ant.home}</echo></target></project>' > build.xml
 ''')
-                ant {
-                    antInstallation(defaultAnt)
-                }
+                    ant {
+                        antInstallation(defaultAnt)
+                    }
 
-                shell(
-                        '''which mvn || true
-mvn -version || true
-echo '<project><modelVersion>4.0.0</modelVersion><groupId>org.apache.poi</groupId><artifactId>build-tst</artifactId><version>1.0.0</version></project>' > pom.xml
-''')
-                maven {
-                    goals('package')
-                    mavenInstallation(defaultMaven)
                 }
             }
         }
         conditionalSteps {
             condition {
                 fileExists('c:\\windows', BaseDir.WORKSPACE)
-            }
-            runner('DontRun')
-            steps {
-                batchFile(
-                        '''@echo off
+                runner('DontRun')
+                steps {
+                    batchFile {
+                        command(
+'''@echo off
 echo .
 where javac.exe
 echo .
@@ -668,10 +618,73 @@ javac -version
 echo .
 echo ^<?xml version=^"1.0^"?^>^<project name=^"POI Build^" default=^"test^"^>^<target name=^"test^"^>^<echo^>Using Ant: ${ant.version} from ${ant.home}, ant detected Java ${ant.java.version} (may be different than actual Java sometimes...), using Java: ${java.version}/${java.runtime.version}/${java.vm.version}/${java.vm.name} from ${java.vm.vendor} on ${os.name}: ${os.version}^</echo^>^</target^>^</project^> > build.xml
 ''')
-                ant {
-                    antInstallation(defaultAntWindows)
+                    }
+                    ant {
+                        antInstallation(defaultAntWindows)
+                    }
                 }
             }
         }
     }
 }
+
+/* I tried to put the view into a sub-folder/sub-view, but failed, there are multiple related
+ plugins so this is all a bit confusing :(, see also https://issues.apache.org/jira/browse/INFRA-14002
+dashboardView("P/POI-new") {
+    columns {
+        status()
+        weather()
+        configureProject()
+        buildButton()
+        cronTrigger()
+        lastBuildConsole()
+        name()
+        lastSuccess()
+        lastFailure()
+        lastDuration()
+        //lastSuccessDescription()
+        jacoco()
+    }
+    description("<table>\n" +
+            "  <tr>\n" +
+            "    <td><img src=\"https://poi.apache.org/images/project-header.png\" /></td>\n" +
+            "    <td>  \n" +
+            "      <p>Apache POI - the Java API for Microsoft Documents</p>\n" +
+            "      <p><b>Most of the POI Jobs are automatically generated by Jenkins Job DSL\n" +
+            "        at <a href=\"https://svn.apache.org/repos/asf/poi/trunk/jenkins\">https://svn.apache.org/repos/asf/poi/trunk/jenkins</a>,<br/>\n" +
+            "        see <a href=\"https://github.com/jenkinsci/job-dsl-plugin/wiki\">https://github.com/jenkinsci/job-dsl-plugin/wiki</a>\n" +
+            "        for more details about the DSL.</b>\n" +
+            "      </p>\n" +
+            "      <p>\n" +
+            "      <b><a href=\"job/POI-DSL-1.8/lastSuccessfulBuild/findbugsResult/\" target=\"_blank\">Findbugs report of latest build</a></b> -\n" +
+            "      <b><a href=\"https://builds.apache.org/analysis/dashboard?id=org.apache.poi%3Apoi-parent&did=1\" target=\"_blank\">Sonar reports</a></b> -\n" +
+            "      <b><a href=\"job/POI-DSL-1.8/lastSuccessfulBuild/artifact/build/coverage/index.html\" target=\"_blank\">Coverage of latest build</a></b>\n" +
+            "      </p>\n" +
+            "    </td>\n" +
+            "  </tr>\n" +
+            "</table>")
+    filterBuildQueue(false)
+    filterExecutors(false)
+
+    // Job selection
+    jobs {*/
+//regex(/.*POI.*/)
+/*}
+
+// Layout
+topPortlets {
+    jenkinsJobsList {
+        displayName('POI jobs')
+    }
+}
+leftPortlets {
+    testStatisticsChart()
+}
+rightPortlets {
+    testTrendChart()
+}
+bottomPortlets {
+    testStatisticsGrid()
+    buildStatistics()
+}
+}*/
